# aws-thumbnailer

./: .gitignore  .terraform.lock.hcl  Cargo.toml  README.md  flake.nix  main.tf  variables.tf
src/: event_handler.rs  main.rs
thumbnailer/: .gitignore  Cargo.toml
thumbnailer/src/: event_handler.rs
website/: Cargo.toml
website/src/: extensions.rs  handlers.rs  main.rs
website/src/renderables/: css.rs  js.rs  mod.rs
website/src/views/: document.rs  index.rs  mod.rs  nav.rs  uploads.rs
