[package]
name = "thumbnailer"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-sdk-s3 = "1.88.0"
aws_lambda_events = { version = "0.15.1", default-features = false, features = ["s3"] }

lambda_runtime = "0.13.0"
tokio = { version = "1", features = ["macros"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "debuginfo"