[package]
name = "thumbnailer"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.6.3"
aws-sdk-s3 = "1.88.0"
aws_lambda_events = { version = "0.15.1", default-features = false, features = ["s3"] }
bytes = "1.10.1"
image = "0.25.6"

lambda_runtime = "0.13.0"
thiserror = "2.0.12"
tokio = { version = "1", features = ["macros"] }


