[package]
name = "website"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
axum-htmx = "0.7.0"
hypertext = { git = "https://github.com/vidhanio/hypertext.git", branch = "main", features = ["axum", "htmx"] }
lambda_http = "0.13.0"
lambda_runtime = "0.13.0"
rust-embed = { version = "8.7.2", features = ["interpolate-folder-path", "deterministic-timestamps", "mime-guess", "axum-ex"] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1", features = ["macros"] }
